ServiceName/deploy/Infra/terraform/linkerd-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: linkerd
  name: linkerd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: linkerd-web
          servicePort: 8084
